--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,101 @@
 body {
   background-color: silver;
 }
+
+.container {
+  display:flex;
+}
+
+.ingredient {
+  border: 4px solid green;
+  background-color: rgba(128, 64, 0, 0.716);
+  border-radius: 4px;
+  height: 11vw;
+  display: flex;
+
+}
+
+.ingredient__item {
+  border: 4px solid rgb(147, 147, 149, 0.6);
+  background-color: rgba(14, 85, 7, 0.767);
+  border-radius: 4px;
+  display: block;
+  height: 9.6vw;
+  padding: 0.625rem;
+  margin-right: 0.25rem;
+  border-top: 15px solid grey;
+  border-right: 9px solid rgb(75, 75, 75);
+  border-top-right-radius: 4px;
+}
+
+.ingredient__item_image {
+  background-color: white;
+  border-radius: 10vw;
+  height: 4vw;
+  width: 5vw;
+  display: block;
+}
+
+.ingredient__item_image img {
+  top: 0vw;
+  position:absolute;
+}
+.ingredient__item_header {
+
+}
+
+.ingredient__item_name {
+
+  height: 4vw;
+  justify-content: center;
+  display: block;
+  font-weight: bold;
+  font-size: 18px;
+  font-family: 'EB Garamond', serif;
+  }
+
+  .ingredient__item_name--white {
+    color: white;
+  }
+  .ingredient__item_name--red {
+    color: red;
+  }
+
+/* triforce https://codepen.io/GemmaStiles/pen/pGOEYR */
+.triforce {
+  margin:auto;
+}
+
+.triangle {
+  border-bottom:104px solid rgb(255,188,0, 0.2);
+  border-left:60px solid transparent;
+  border-right:60px solid transparent;
+  content:'';
+  height:0;
+  position:absolute;
+  width:0;
+  transform: scale3d(0.22, 0.22, 0.22);
+  top: 60px;  
+  right: -35px;
+}
+
+.triangle:before {
+  border-bottom:104px solid rgb(255,188,0, 0.2);
+  border-left:60px solid transparent;
+  border-right:60px solid transparent;
+  content:'';
+  display:block;
+  left:-120px;
+  position:absolute;
+  top:104px;
+}
+
+.triangle:after {
+border-bottom:104px solid rgb(255,188,0, 0.2);
+border-left:60px solid transparent;
+border-right:60px solid transparent;
+content:'';
+display:block;
+position:absolute;
+top:104px;
+}
