--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,20 +13,8 @@ body {
   background-size: cover;
   height: 100%;
 }
-/*
-.container {
-  display:flex;
-  margin-top: 3vw;
-  margin-left: 8vw;
-}
- */
-/* #margin {
-  border-top: 30px solid grey;
-} */
 
 .ingredient {
-  /* border: 4px solid rgb(134,165,169); */
-  /* background-color: rgb(86, 114, 117, 0.5); */
   border-radius: 4px;
   height: 8vw;
   display: flex;
@@ -109,14 +97,10 @@ body {
     from {
         transform: scale(1) rotate(0deg) scale(2, 0.5);;
         left:0px;
-        /* top: 0px;
-        left: 0px; */
       }
       to {
         transform: scale(0.22) rotate(720deg);
         left: 50px;
-        /* top: 500px;
-        left: 1200px; */
       }
     }
     .shrink--disappear {
@@ -211,7 +195,6 @@ body {
     position:absolute;
     top: 19vw;
     right: 20vw;
-    /* transform: scale3d(0.22, 0.22, 0.22); */
   }
 
   #output2__reset {
@@ -227,6 +210,15 @@ body {
     -moz-animation: flip--y 3s ease-out forwards;
     -o-animation: flip--y 3s ease-out forwards;
     animation: flip--y 3s ease-out forwards;
+  }
+
+  .error{
+    text-align: center;
+    vertical-align: middle;
+    font-family: 'EB Garamond', serif;
+    font-size: 22px;
+    color: red;
+  
   }
 
 /* https://codepen.io/GemmaStiles/pen/pGOEYR */
@@ -337,12 +329,9 @@ h1 {
   position: absolute;
   right: 40vw;
   outline: none;
-  /* top: 100vw; */
   margin-right: 1vw;
-  /* margin-top: 5vw; */
   padding: 0 3.25rem;
   padding-bottom: 20vw;
-  /* height: 60vw; */
   width: 60vw;
   height: 90vw;
   font-family: 'Lato', sans-serif;
@@ -398,22 +387,18 @@ ol, li {
   flex: 0 0 100%;
   width: 100%;
   border: none;
-  /* background-color: rgb(177, 177, 177, 0.7); */
   counter-increment: item;
 }
 
 .carousel__slide:nth-child(even) {
-  /* background-color:rgb(252,255,224, 0.7) */
 
 }
 
 .carousel__slide:before {
-  /* content: counter(item); */
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate3d(-50%,-40%,70px);
-  /* color: #fff; */
   font-size: 2em;
 }
 /* To next slide (yellow) */
@@ -467,11 +452,9 @@ ol, li {
 }
 
 .carousel__navigation-button {
-  /* display: inline-block; */
   width: 1.5rem;
   height: 1.5rem;
   border: none;
-  /* background-color: #333; */
   background-clip: content-box;
   border: 0.25rem solid transparent;
   border-radius: 50%;
@@ -508,7 +491,6 @@ ol, li {
 .carousel::after {
   content: '';
   z-index: 1;
-  /* background-color: #333; */
   background-size: 1.5rem 1.5rem;
   background-repeat: no-repeat;
   background-position: center center;
@@ -563,6 +545,5 @@ li a:hover:not(.active) {
 }
 
 .active {
-  /* background-color: #00eeff; */
   color: white;
 }
